--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     padding: 5px;
     border-radius: 20px;
     border: 5px double rgb(0, 0, 0);
+    box-shadow: 5px 5px 10px 4px rgb(201, 201, 201);
 }
 
 .container-card {
@@ -83,4 +84,9 @@ button {
     background: red;
     color: white;
     border: none;
+    outline: none
+}
+
+button:hover {
+    box-shadow: 0 0 5px 2px rgb(231, 50, 50);
 }
